# anki-robo

./: .gitignore  CHANGELOG.md  Makefile  README.md  ankirobo-cli  extractor-details.md  pyproject.toml  requirements.txt  robo-run.py  robo.py
ankirobo/: __init__.py  api.py  input.py  output.py  types.py
ankirobo/cli/: args.py  main.py
ankirobo/extractors/: __init__.py  all.py  api.py  jotoba.py  web.py
ankirobo/extractors/helpers/: api.py  web.py
ankirobo/extractors/linguee/: shared.py
ankirobo/extractors/testdata/: __init__.py
ankirobo/extractors/testdata/jotoba/: ぴかぴか.json
ankirobo/extractors/testdata/linguee/french_english/: encre.html  flâner.html  mettre en valeur.html  pas de soucis.html  (+3 more)
app/: main.py
cli/: args.py  main.py  ops.py
robo/: __init__.py  api.py  extractors.py  input.py  output.py  types.py
robo/extractor/: __init__.py  web.py
robo/extractor/linguee/: __init__.py  french.py
robo/extractors/: __init__.py  all.py  web.py
robo/extractors/linguee/: french.py  french_english.py  shared.py
tests/extractor/linguee/: test_french.py
tests/extractors/: all.py  jotoba.py  test_all_extractors.py
tests/extractors/linguee/: de_en.py  es_en.py  fr_en.py  test_french.py  test_french_english.py
tests/functional/: test-terms-fr  test_cli.py
tests/integration/: test_api.py
tests/testdata/: all.py
tests/testdata/jotoba/: expected.py  あるきまわる.html  あるきまわる.json  はちどり.html  はちどり.json  ぴかぴか.html  嵐.html  嵐.json
tests/testdata/linguee/french/: oreiller.html
tests/testdata/linguee/french_english/: expected.py  hilarant.html  pister.html
tests/testdata/linguee/german_english/: expected.py
tests/testdata/linguee/spanish_english/: expected.py  tormenta.html
(+7 files in other folders)
