[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anki-robo"
version = "0.0.0"
description = "An Anki-card-creation framework."
authors = [
  {name="Keith Fancher"},
]
requires-python = ">= 3.8"
readme = "README.md"
keywords = ["anki"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
GitHub = "https://github.com/keithfancher/anki-robo"

[tool.pytest.ini_options]
# See: https://docs.pytest.org/en/8.0.x/explanation/goodpractices.html
# and: https://stackoverflow.com/a/49033954
pythonpath = "."
